--- a/gradle.properties
+++ b/gradle.properties
@@ -145,12 +145,14 @@ flyingsaucerVersion=R8
 fopVersion=2.7
 
 googleApiServicesCalendarVersion=v3-rev411-1.25.0
-googleApiClientVersion=2.0.0
+googleApiClientVersion=2.0.1
 # Force latest for consistency
-googleHttpClientGsonVersion=1.42.2
-googleHttpClientVersion=1.42.2
+googleErrorProneAnnotationsVersion=2.16
+# Force latest for consistency
+googleHttpClientGsonVersion=1.42.3
+googleHttpClientVersion=1.42.3
 googleOauthClientVersion=1.34.1
-googleProtocolBufVersion=3.21.5
+googleProtocolBufVersion=3.21.9
 
 graalVersion=20.0.0
 
@@ -172,16 +174,17 @@ hamcrestVersion=1.3
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
 htsjdkVersion=2.24.1
 
-httpclient5Version=5.1.3
-httpcore5Version=5.1.4
+httpclient5Version=5.2
+httpcore5Version=5.2
 
 httpclientVersion=4.5.13
 httpcoreVersion=4.4.14
 
-jacksonVersion=2.13.4
-jacksonAnnotationsVersion=2.13.4
-jacksonDatabindVersion=2.13.4.2
-jacksonJaxrsBaseVersion=2.13.4
+# Jackson dependencies are usually released in tandem, but occasionally one gets a patch release out-of-sync with the others
+jacksonVersion=2.14.1
+jacksonAnnotationsVersion=2.14.1
+jacksonDatabindVersion=2.14.1
+jacksonJaxrsBaseVersion=2.14.1
 
 jamaVersion=1.0.3
 
