--- a/build.gradle
+++ b/build.gradle
@@ -162,6 +162,11 @@ allprojects {
 //                    maven {
 //                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
 //                    }
+                    maven {
+                        // Mondrian dependencies are available via this repository. It's a direct dependency of the Query
+                        // module but is declared here as many modules depend on Query and therefore need it as well.
+                    	url "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn"
+                    }
                 }
                 // this is located after our local repos because we need to pick up our version of radeox instead of the one found in mavenCentral
                 // (should probably have published our mods with a different version)
@@ -282,6 +287,10 @@ allprojects {
                     // force consistency in nlp and saml that bring these in transitively
                     force "org.codehaus.woodstox:stax2-api:${stax2ApiVersion}"
                     force "com.fasterxml.woodstox:woodstox-core:${woodstoxCoreVersion}"
+                    // force consistency in docker and connectors, saml, nlp
+                    force "org.bouncycastle:bcprov-jdk15on:${bouncycastleVersion}"
+                    // force consistency in docker and connectors and saml
+                    force "org.bouncycastle:bcpkix-jdk15on:${bouncycastleVersion}"
                     // force consistency in transitive dependency for fileTransfer compared to api
                     // This can be removed when the googleHttpClient version is updated to bring in a consistent version
                     force "com.google.code.findbugs:jsr305:${jsr305Version}"
