--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ allprojects {
         apply plugin: 'org.owasp.dependencycheck'
         dependencyCheck {
             outputDirectory = "${project.rootProject.buildDir}/reports/dependencyCheck/${project.path.replaceAll(':', '_').substring(1)}"
+            analyzers {
+                assemblyEnabled = false // Sets whether the .NET Assembly Analyzer should be used.
+                nodeEnabled = false // Sets whether the Node.js Analyzer should be used.
+            }
         }
     }
     if (BuildUtils.shouldPublish(project) || BuildUtils.shouldPublishDistribution(project))
