--- a/gradle.properties
+++ b/gradle.properties
@@ -193,6 +193,7 @@ javassistVersion=3.20.0-GA
 javaMailVersion=1.6.7
 
 # No longer part of Java 10. Dependency for many modules.
+jaxbApiVersion=2.3.1
 jaxbVersion=2.3.3
 
 jaxrpcVersion=1.1
