--- a/gradle.properties
+++ b/gradle.properties
@@ -191,6 +191,7 @@ jamaVersion=1.0.3
 javassistVersion=3.20.0-GA
 
 javaMailVersion=1.6.7
+javaxAnnotationVersion=1.3.2
 
 # No longer part of Java 10. Dependency for many modules.
 jaxbApiVersion=2.3.1
