Output OWASP report in JUnit format

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
                     enabled = false
                 }
             }
+            formats = ['HTML', 'JUNIT']
             skipConfigurations = ['dedupe', 'gwtCompileClasspath', 'gwtRuntimeClasspath', 'developmentOnly']
             skipProjects = [':server:testAutomation']
         }
