--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ allprojects {
                 }
             }
             formats = ['HTML', 'JUNIT']
-            skipConfigurations = ['dedupe', 'gwtCompileClasspath', 'gwtRuntimeClasspath', 'developmentOnly']
+            skipConfigurations = ['dedupe', 'gwtCompileClasspath', 'gwtRuntimeClasspath']
             skipProjects = [':server:testAutomation']
         }
     }
