Revert "Revert "Update embedded Tomcat to Spring 5.3.27 (#457)""
This reverts commit 212e14abd544d261f38432d4626eb6472dfbac77.

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ allprojects {
                 }
             }
             formats = ['HTML', 'JUNIT']
-            skipConfigurations = ['dedupe', 'gwtCompileClasspath', 'gwtRuntimeClasspath']
+            skipConfigurations = ['dedupe', 'gwtCompileClasspath', 'gwtRuntimeClasspath', 'developmentOnly']
             skipProjects = [':server:testAutomation']
         }
     }
