--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -1,9 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2"
-        }
+        gradlePluginPortal()
         maven {
             url "${artifactory_contextUrl}/plugins-release-no-proxy"
         }
