Update LabKey dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -223,6 +223,8 @@ log4j2Version=2.19.0
 
 lombokVersion=1.18.24
 
+luceneVersion=9.4.2
+
 mysqlDriverVersion=8.0.32
 
 mssqlJdbcVersion=12.2.0.jre11
