--- a/gradle.properties
+++ b/gradle.properties
@@ -58,7 +58,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=1.40.5
+gradlePluginsVersion=1.41.0-jspConfigUpdates-SNAPSHOT
 owaspDependencyCheckPluginVersion=8.2.1
 versioningPluginVersion=1.1.0
 
