Enable access loc for embedded Tomcat

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -49,7 +49,7 @@ configurations
         }
 configurations.binaries.setDescription("Utility and proteomics binaries")
 
-if (!project.hasProperty('excludeProteomicsBinaries'))
+if (project.hasProperty('includeProteomicsBinaries'))
 {
     dependencies
     {
