--- a/server/build.gradle
+++ b/server/build.gradle
@@ -49,7 +49,7 @@ configurations
         }
 configurations.binaries.setDescription("Utility and proteomics binaries")
 
-if (project.hasProperty('includeProteomicsBinaries'))
+if (!project.hasProperty('excludeProteomicsBinaries'))
 {
     dependencies
     {
