--- a/gradle.properties
+++ b/gradle.properties
@@ -51,6 +51,8 @@ labkeyClientApiVersion=5.2.0
 # Version numbers for the various binary artifacts that are included when
 # deploying via deployApp or deployDist and when creating distributions.
 windowsUtilsVersion=1.0
+# Uncomment the following line to download proteomics binaries
+#includeProteomicsBinaries
 linuxProteomicsBinariesVersion=2.0
 osxProteomicsBinariesVersion=1.0
 windowsProteomicsBinariesVersion=1.0
