--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -22,7 +22,7 @@ context.password[0]=@@jdbcPassword@@
 #context.username[1]=@@extraJdbcUser@@
 #context.password[1]=@@extraJdbcPassword@@
 
-#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
+#useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
 #context.serverGUID=
 
@@ -35,7 +35,7 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
-#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
+#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
@@ -53,7 +53,7 @@ management.endpoints.web.exposure.include=*
 spring.main.banner-mode=off
 
 # Enable tomcat access log
-server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
+#useLocalBuild#server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.directory=logs
 server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %S %I "%{Referrer}i" "%{User-Agent}i" %{LABKEY.username}s
