--- a/gradle.properties
+++ b/gradle.properties
@@ -145,6 +145,7 @@ fopVersion=2.7
 
 googleApiClientVersion=2.2.0
 # Force latest for consistency
+googleErrorProneAnnotationsVersion=2.18.0
 googleHttpClientGsonVersion=1.42.2
 googleHttpClientVersion=1.43.2
 googleOauthClientVersion=1.34.1
